[gd_scene load_steps=14 format=3 uid="uid://bqu6nx6bhrjjn"]

[ext_resource type="Script" uid="uid://b8mx762ql6ijg" path="res://Scripts/game.gd" id="1_vc7v3"]
[ext_resource type="PackedScene" uid="uid://dt61mx5v8mxvg" path="res://Prefabs/player.tscn" id="2_6bh61"]
[ext_resource type="Texture2D" uid="uid://1mjlxvw6notp" path="res://skins/healbar player/Health bar 0.svg" id="2_qepiu"]
[ext_resource type="Texture2D" uid="uid://c6h36lkbqaich" path="res://skins/healbar player/Health bar_player.svg" id="3_xfscx"]
[ext_resource type="Script" uid="uid://bbcb3rmalmitt" path="res://Scripts/player_health_bar.gd" id="4_xfscx"]
[ext_resource type="Texture2D" uid="uid://bl6vsdpunabuy" path="res://skins/healbar player/overheatcirclebar.svg" id="5_ml5ix"]
[ext_resource type="Texture2D" uid="uid://gbj4u3m2pq8t" path="res://skins/healbar player/overheatcirclebar1.svg" id="6_iv821"]
[ext_resource type="Script" uid="uid://dbwtfpdu1df7x" path="res://Scripts/player_overheat_bar.gd" id="6_ml5ix"]
[ext_resource type="Texture2D" uid="uid://v82obvuafxm3" path="res://skins/healbar player/overheatcirclebar2.svg" id="6_tefna"]
[ext_resource type="Script" uid="uid://dg4ucmm5j628p" path="res://Prefabs/pause_menu.gd" id="10_1osa2"]
[ext_resource type="Texture2D" uid="uid://dhc6mu4jne8df" path="res://skins/menu/pausemenu.svg" id="10_ofweq"]

[sub_resource type="FontFile" id="FontFile_feb5d"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="Theme" id="Theme_fc0e3"]
default_font = SubResource("FontFile_feb5d")
default_font_size = 20

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_vc7v3")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="EnemyTimer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="EnemyTimer3" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Game_ui" type="Control" parent="."]
z_index = 2
custom_minimum_size = Vector2(700, 925)
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 32.0
offset_right = 701.0
offset_bottom = 957.0
theme = SubResource("Theme_fc0e3")

[node name="ScoreLabel" type="Label" parent="Game_ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 234.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Score: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Game_ui"]
layer = -1

[node name="player_health_bar" type="TextureProgressBar" parent="Game_ui/CanvasLayer" node_paths=PackedStringArray("player")]
process_mode = 1
offset_left = 11.0
offset_top = 15.0
offset_right = 767.0
offset_bottom = 166.0
scale = Vector2(0.3, 0.3)
texture_under = ExtResource("2_qepiu")
texture_progress = ExtResource("3_xfscx")
script = ExtResource("4_xfscx")
player = NodePath("../../../Player")

[node name="player_overheat_bar" type="TextureProgressBar" parent="Game_ui/CanvasLayer" node_paths=PackedStringArray("player")]
process_mode = 1
offset_left = 11.0
offset_top = 66.0
offset_right = 200.0
offset_bottom = 255.0
scale = Vector2(0.55, 0.55)
fill_mode = 4
texture_under = ExtResource("5_ml5ix")
texture_over = ExtResource("6_tefna")
texture_progress = ExtResource("6_iv821")
script = ExtResource("6_ml5ix")
player = NodePath("../../../Player")

[node name="RestartTimer" type="Timer" parent="."]

[node name="EnemyTimer4" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_6bh61")]
position = Vector2(336, 784)

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_1osa2")

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 2
offset_left = 276.0
offset_top = 650.0
offset_right = 400.0
offset_bottom = 681.0
scale = Vector2(1.11844, 2.48114)

[node name="UnpauseButton" type="Button" parent="PauseMenu/PanelContainer"]
process_mode = 3
z_index = 1
layout_mode = 2
action_mode = 0
text = "Pause"

[node name="PanelContainer2" type="PanelContainer" parent="PauseMenu"]
z_index = 1
layout_mode = 2
offset_left = 275.0
offset_top = 462.0
offset_right = 422.0
offset_bottom = 524.0

[node name="ResetButton" type="Button" parent="PauseMenu/PanelContainer2"]
process_mode = 3
layout_mode = 2
action_mode = 0
text = "Reset"

[node name="PanelContainer3" type="PanelContainer" parent="PauseMenu"]
process_priority = 1
process_physics_priority = 1
z_index = 1
layout_mode = 2
offset_left = 250.0
offset_top = 267.0
offset_right = 730.0
offset_bottom = 464.0
scale = Vector2(0.411677, 0.411677)

[node name="LeaveButton" type="Button" parent="PauseMenu/PanelContainer3"]
layout_mode = 2
text = "Give up"

[node name="PanelContainer4" type="PanelContainer" parent="PauseMenu"]
layout_mode = 2
offset_right = 700.0
offset_bottom = 925.0

[node name="Pausemenu" type="Sprite2D" parent="PauseMenu/PanelContainer4"]
position = Vector2(350, 450)
scale = Vector2(0.709656, 0.709656)
texture = ExtResource("10_ofweq")

[node name="ColorRect" type="ColorRect" parent="PauseMenu/PanelContainer4"]
light_mask = 33
z_index = -1
layout_mode = 2
color = Color(1, 1, 1, 0.32549)

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="EnemyTimer2" to="." method="_on_enemy_timer_2_timeout"]
[connection signal="timeout" from="EnemyTimer3" to="." method="_on_enemy_timer_3_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
[connection signal="timeout" from="EnemyTimer4" to="." method="_on_enemy_timer_4_timeout"]
[connection signal="pressed" from="PauseMenu/PanelContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer2/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer3/LeaveButton" to="PauseMenu" method="_on_leave_button_pressed"]
